# monzo-cli

./: Cargo.toml  README.md  flake.nix
src/: config.rs  lib.rs  main.rs
