[package]
name = "monzo-cli"
authors = [
  "Damien Broka <damienbroka@mailbox.org>"
]
version = "0.1.0"
edition = "2018"

[[bin]]
name = "monzo"
path = "src/main.rs"

[lib]
name = "monzo_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }

structopt = "0.3"

dirs = "4.0"
config = "0.11"

console = "0.14"

anyhow = "1.0"

futures = "0.3"
tokio = { version = "1.11", features = [ "full" ] }

monzo-lib = "0.4.0"